2004-12-10  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/service/service.py:
	  do not start manager/worker if one is already running.
	  Fixes issue #132

2004-12-10  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/service/main.py:
	  error on unknown commands
	  implement restart

2004-12-10  Thomas Vander Stichele  <thomas at apestaart dot org>

	* data/glade/wizard_consumption.glade:
	* data/glade/wizard_disk.glade:
	* data/glade/wizard_http.glade:
	  various accessors

	patch by: Zaheer Abbas Merali <zaheermerali at gmail dot com>
	* flumotion/component/consumers/disker/Makefile.am:
	* flumotion/component/consumers/disker/admin_gtk.py:
	* flumotion/component/consumers/disker/disker.glade:
	* flumotion/component/consumers/disker/disker.py:
	* flumotion/component/consumers/disker/disker.xml:
	  Add button to move to new archive file.
	  Fixes issue #122
	 

2004-12-10  Thomas Vander Stichele  <thomas at apestaart dot org>

	* data/glade/wizard_tvcard.glade:
	  add accessors
	* flumotion/component/effects/colorbalance/colorbalance.glade:
	  add spacing
	* flumotion/service/service.py:
	  stop workers before managers
	  don't fatally fail when no managers or workers config dirs found,
	  since that's ok.  Needs a prerelease test.

2004-12-10  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/admin/admin.py:
	* flumotion/common/bundle.py:
	* flumotion/test/test_bundle.py:
	  abstract away bundle extraction path more, and make the cachedir
	  more easily browsable :)

2004-12-09  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/admin/gtk/client.py:
	* flumotion/component/consumers/httpstreamer/admin_gtk.py:
	* flumotion/component/consumers/httpstreamer/http.py:
	* flumotion/component/consumers/httpstreamer/resources.py:
	* flumotion/component/producers/videotest/admin_gtk.py:
	  implement tabs.  add a log tab to the streamer.
